# RAG.1.0

./: .gitignore  README.md  main.py  pyproject.toml
config/: settings.py
evaluation/: qa_dataset.jsonl
ingestion/: build_vector_db.py  chunk_documents.py  ingest.py  load_documents.py  validate_documents.py
knowledge_base/: 00-front-matter-front-matter.md  00-intro-intro.md  01-1-intro-to-design-patterns-welcome-to-design-patterns.md  02-2-the-observer-pattern-keeping-your-objects-in-the-know.md  03-3-the-decorator-pattern-decorating-objects.md  04-4-the-factory-pattern-baking-with-oo-goodness.md  05-5-the-singleton-pattern-one-of-a-kind-objects.md  06-6-the-command-pattern-encapsulating-invocation.md  07-7-the-adapter-and-facade-patterns-being-adaptive.md  08-8-the-template-method-pattern-encapsulating-algorithms.md  09-9-the-iterator-and-composite-patterns-well-managed-collections.md  10-10-the-state-pattern-the-state-of-things.md  11-11-the-proxy-pattern-controlling-object-access.md  12-12-compound-patterns-patterns-of-patterns.md  13-13-better-living-with-patterns-patterns-in-the-real-world.md  14-14-appendix-leftover-patterns.md
rag_app/: answer.py  app.py  prompts.py  retriever.py
tests/unit/: test_data_set.py
